<resources>
    <string name="app_name">SnacksTime</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="snacks_time">Snacks Time</string>
    <string name="a_great_snacks_is_minutes_away">A GREAT SNACKS is minutes away</string>
    <string name="register">Register</string>
    <string name="userName">User Name</string>
    <string name="signup">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="mobileNumber">Mobile Numer</string>
    <string name="sing_in_with_mobile">Sign In With Mobile Number</string>
    <string name="Login">Login</string>
    <string name="sendOtp">Send Otp</string>
    <string name="enter_your_mobile_number">enter Your Mobile Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="verify">Verify</string>
    <string name="recovery">Recovery</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="nearest_restaurant">Nearest Restaurant</string>
    <string name="food_menu">Food Menu</string>
    <string name="dish_name">Dish Name</string>
</resources>