<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    tools:context=".login.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C5000000"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:text="@string/register"
            android:textColor="#FAF7F7"
            android:textSize="@dimen/heading_text" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_padding"
            android:layout_marginTop="@dimen/input_gap"
            android:layout_marginEnd="@dimen/layout_padding"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="@dimen/drawable_padding"
            android:drawableTint="@color/white"
            android:ems="10"
            android:hint="@string/userName"
            android:inputType="textEmailAddress"
            android:textColor="@color/hint_color"
            android:textColorHint="@color/hint_color" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_padding"
            android:layout_marginTop="@dimen/input_gap"
            android:layout_marginEnd="@dimen/layout_padding"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="@dimen/drawable_padding"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/hint_color"
            android:textColorHint="@color/hint_color" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_padding"
            android:layout_marginTop="@dimen/input_gap"
            android:layout_marginEnd="@dimen/layout_padding"
            android:drawableStart="@drawable/ic_key"
            android:drawablePadding="@dimen/drawable_padding"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/hint_color"
            android:textColorHint="@color/hint_color" />

        <TextView
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_padding"
            android:layout_marginTop="@dimen/input_gap"
            android:layout_marginEnd="@dimen/layout_padding"
            android:drawablePadding="@dimen/drawable_padding"
            android:ems="10"
            android:padding="8dp"
            android:hint="@string/mobileNumber"
            android:textColorHint="@color/hint_color"
            android:textColor="@color/hint_color"
            app:drawableStartCompat="@drawable/ic_call" />

        <Button
            android:id="@+id/SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_padding"
            android:layout_marginTop="@dimen/input_gap"
            android:layout_marginEnd="@dimen/layout_padding"
            android:backgroundTint="@color/button"
            android:padding="@dimen/button_padding"
            android:text="@string/signup"
            android:textAllCaps="false" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>