<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    tools:context=".login.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C5000000"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:text="@string/login"
            android:textColor="#FAF7F7"
            android:textSize="@dimen/heading_text" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_padding"
            android:layout_marginTop="@dimen/input_gap"
            android:layout_marginEnd="@dimen/layout_padding"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="@dimen/drawable_padding"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/hint_color"
            android:textColorHint="@color/hint_color" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_padding"
            android:layout_marginTop="@dimen/input_gap"
            android:layout_marginEnd="@dimen/layout_padding"
            android:drawableStart="@drawable/ic_key"
            android:drawablePadding="@dimen/drawable_padding"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/hint_color"
            android:textColorHint="@color/hint_color" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/input_gap"
            android:layout_marginEnd="@dimen/layout_padding"
            android:text="@string/forgot_password"
            android:textColor="@color/hint_color" />

        <Button
            android:id="@+id/SignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_padding"
            android:layout_marginTop="@dimen/input_gap"
            android:layout_marginEnd="@dimen/layout_padding"
            android:backgroundTint="@color/button"
            android:padding="@dimen/button_padding"
            android:text="@string/sign_in" />

        <TextView
            android:id="@+id/Or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_gap"
            android:text="Or"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/mobileTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_padding"
            android:layout_marginTop="@dimen/input_gap"
            android:layout_marginEnd="@dimen/layout_padding"
            android:drawableStart="@drawable/ic_call"
            android:drawablePadding="@dimen/drawable_padding"
            android:ems="10"
            android:hint="@string/mobile_number"
            android:inputType="phone"
            android:textColor="@color/text"
            android:textColorHint="@color/hint_color"
            android:visibility="gone" />

        <Button
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_padding"
            android:layout_marginTop="@dimen/input_gap"
            android:layout_marginEnd="@dimen/layout_padding"
            android:backgroundTint="@color/button"
            android:padding="@dimen/button_padding"
            android:text="@string/sign_in"
            android:visibility="gone" />

        <Button
            android:id="@+id/SignUp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_padding"
            android:layout_marginTop="@dimen/input_gap"
            android:layout_marginEnd="@dimen/layout_padding"
            android:padding="@dimen/button_padding"
            android:text="@string/sing_in_with_mobile"
            android:textColor="@color/hint_color"
            app:strokeColor="@color/button"
            app:strokeWidth="2dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>