<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    tools:context=".login.flashScreenFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C5000000"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abril_fatface"
            android:text="@string/snacks_time"
            android:textColor="#FDFCFC"
            android:textSize="34sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/drawable_padding"
            android:src="@drawable/eating" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/drawable_padding"
            android:text="@string/a_great_snacks_is_minutes_away"
            android:textColor="@color/hint_color"
            android:textSize="16sp" />

        <Button
            android:id="@+id/Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_padding"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="@dimen/layout_padding"
            android:backgroundTint="@color/button"
            android:padding="@dimen/button_padding"
            android:text="@string/Login" />

        <Button
            android:id="@+id/Register"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_padding"
            android:layout_marginTop="@dimen/input_gap"
            android:layout_marginEnd="@dimen/layout_padding"
            android:layout_marginBottom="@dimen/input_gap"
            android:padding="@dimen/button_padding"
            android:text="@string/register"
            android:textColor="@color/hint_color"
            app:strokeColor="@color/button"
            app:strokeWidth="2dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>