<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    tools:context=".login.MobileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C5000000"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:text="@string/mobile_number"
            android:textColor="@color/text"
            android:textSize="34dp" />

        <EditText
            android:id="@+id/phoneTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_padding"
            android:layout_marginTop="@dimen/input_gap"
            android:layout_marginEnd="@dimen/layout_padding"
            android:drawableStart="@drawable/ic_call"
            android:drawablePadding="@dimen/drawable_padding"
            android:ems="10"
            android:hint="@string/enter_your_mobile_number"
            android:inputType="phone"
            android:textColor="@color/text"
            android:textColorHint="@color/hint_color" />

        <Button
            android:id="@+id/SendOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_padding"
            android:layout_marginTop="@dimen/input_gap"
            android:layout_marginEnd="@dimen/layout_padding"
            android:backgroundTint="@color/button"
            android:padding="@dimen/button_padding"
            android:text="@string/sendOtp" />

        <EditText
            android:id="@+id/otpView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_padding"
            android:layout_marginTop="@dimen/input_gap"
            android:layout_marginEnd="@dimen/layout_padding"
            android:ems="10"
            android:hint="Enter otp here"
            android:inputType="phone"
            android:maxLength="6"
            android:textColor="@color/text"
            android:textColorHint="@color/hint_color"
            android:visibility="gone" />

        <Button
            android:id="@+id/verify"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_padding"
            android:layout_marginTop="@dimen/input_gap"
            android:layout_marginEnd="@dimen/layout_padding"
            android:padding="@dimen/button_padding"
            android:text="@string/verify"
            android:textColor="@color/hint_color"
            android:visibility="gone"
            app:strokeColor="@color/button"
            app:strokeWidth="2dp" />

        <TextView
            android:id="@+id/Resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_padding"
            android:layout_marginTop="@dimen/input_gap"
            android:layout_marginEnd="@dimen/layout_padding"
            android:padding="12dp"
            android:text="@string/resend_otp"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:visibility="gone" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>