<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    tools:context=".login.ForgotPasswordFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C5000000"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:text="@string/forgot_password"
            android:textColor="@color/text"
            android:textSize="34dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_padding"
            android:layout_marginTop="@dimen/input_gap"
            android:layout_marginEnd="@dimen/layout_padding"
            android:text="A verification Link will be send to your email address..."
            android:textColor="@color/text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/phoneTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_padding"
            android:layout_marginTop="@dimen/input_gap"
            android:layout_marginEnd="@dimen/layout_padding"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="@dimen/drawable_padding"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/text"
            android:textColorHint="@color/hint_color" />

        <Button
            android:id="@+id/recovery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_padding"
            android:layout_marginTop="@dimen/input_gap"
            android:layout_marginEnd="@dimen/layout_padding"
            android:backgroundTint="@color/button"
            android:padding="@dimen/button_padding"
            android:text="@string/recovery" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>